chore: eslint disable camelcase

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "no-unused-expressions": "off",
     "no-use-before-define": "off",
     "react/jsx-props-no-spreading": "off",
+    "camelcase": "off",
     "no-param-reassign": [
       "error",
       {
