--- a/ios/name/Info.plist
+++ b/ios/name/Info.plist
@@ -68,5 +68,9 @@
   <!-- Include this only if you are planning to use the microphone for video recording -->
   <key>NSMicrophoneUsageDescription</key>
   <string>Your message to user when the microphone is accessed for the first time</string>
+  <key>UIAppFonts</key>
+  <array>
+    <string>Feather.ttf<string>
+  </array>
 </dict>
 </plist>
